// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer > Snapshots > matches snapshot in idle state 1`] = `
"

InputPrompt:   Type your message or @path/to/file
 cli  │ git:(main) │ ⏸ default (shift+tab)
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode 1`] = `
"
InputPrompt:   Type your message or @path/to/file
"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode while loading 1`] = `
"LoadingIndicator
InputPrompt:   Type your message or @path/to/file
"
`;

exports[`Composer > Snapshots > matches snapshot in narrow view 1`] = `
"

InputPrompt:   Type your message or
@path/to/file
 cli  │ git:(main) │ ⏸ default (shift+t…
"
`;

exports[`Composer > Snapshots > matches snapshot while streaming 1`] = `
"
LoadingIndicator: Thinking
InputPrompt:   Type your message or @path/to/file
 cli  │ git:(main) │ ⏸ default (shift+tab)
"
`;
